update, add pics

--- a/materials/thursday-4th/siggi/double-repeat/index-speaker.html
+++ b/materials/thursday-4th/siggi/double-repeat/index-speaker.html
@@ -174,13 +174,21 @@ Figure&nbsp;1: ‘Perbars’ of capelin NASC in 0.1 nmi intervals in first cover
 </ul>
 </div><div class="column" style="width:60%;">
 <dl>
-<dt><img data-src="second-go.png" style="width:80.0%"></dt>
+<dt><img data-src="img/second-go.png" style="width:80.0%"></dt>
 <dd>
 <p>Transect lay-out</p>
 </dd>
 </dl>
 </div></div>
 </section>
+<section id="from-the-field-i" class="slide level2">
+<h2>From the field I</h2>
+
+<img data-src="img/IMG_2011.jpg" class="r-stretch"></section>
+<section id="from-the-field-ii" class="slide level2">
+<h2>From the field II</h2>
+
+<img data-src="img/IMG_2019.jpg" class="r-stretch"></section>
 <section id="results-polar-ammassak" class="slide level2">
 <h2>Results — Polar Ammassak</h2>
 
