add data transfer clip

--- a/materials/thursday-4th/siggi/double-repeat/index-speaker.html
+++ b/materials/thursday-4th/siggi/double-repeat/index-speaker.html
@@ -189,6 +189,10 @@ Figure&nbsp;1: ‘Perbars’ of capelin NASC in 0.1 nmi intervals in first cover
 <h2>From the field II</h2>
 
 <img data-src="img/IMG_2019.jpg" class="r-stretch"></section>
+<section id="from-the-field-iii" class="slide level2">
+<h2>From the field III (?????)</h2>
+<p><video data-src="img/IMG_2016.mov" controls=""><a href="img/IMG_2016.mov">Video</a></video></p>
+</section>
 <section id="results-polar-ammassak" class="slide level2">
 <h2>Results — Polar Ammassak</h2>
 
